# document-translation

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  api.py  app.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/api/: routes.py
backend/app/models/: schemas.py
backend/app/services/: anthropic_client.py  extraction_prompt.py  pdf_renderer.py  pipeline.py
frontend/: streamlit_app.py
output/coding/: ANON_3._5450_-_WARDA_JASIM_translated.docx
src/: config.py  extractor.py  models.py  pdf_utils.py  translator.py
src/llm/: structured.py
src/solutions/: coding_agent.py  text_layer.py  vision_overlay.py
workspace/: data_p01.json  data_p02.json  data_p03.json  data_p04.json  data_p05.json  p01_iter1.py  p01_iter2.py  p01_iter3.py  p01_iter5.py  p02_iter1.py  p02_iter2.py  p02_iter3.py  p02_iter5.py  p03_iter1.py  p04_iter1.py  p05_iter2.py  page_01.docx  page_02.docx  page_03.docx  page_04.docx  page_05.docx
workspace/ANON_3__5450_-_WARDA_JASIM/: data_p01.json  data_p02.json  data_p03.json  data_p05.json  p01_iter1.py  p02_iter1.py  p02_iter3.py  p03_iter1.py  p04_iter1.py  p05_iter1.py  page_01.best.docx  page_02.docx  page_03.docx  page_04.best.docx  page_05.docx
workspace/formular_cerere_decontare_medicala_ro/: data_p01.json  data_p02.json  data_p03.json  p01_iter1.py  p01_iter2.py  p01_iter3.py  p02_iter1.py  p02_iter2.py  p02_iter3.py  p02_iter4.py  p02_iter5.py  p03_iter1.py  p03_iter2.py  p03_iter3.py  p03_iter4.py  page_01.best.docx  page_02.best.docx  page_03.best.docx
(+10 files in other folders)
