[project]
name = "document-translation"
version = "0.1.0"
description = "PDF form translation — vision overlay and PAO coding agent modes"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "pymupdf>=1.24.0",
    "Pillow>=10.0.0",
    "loguru>=0.7.0",
    "python-docx>=1.1.0",
    "pyautogen>=0.2.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "click>=8.0.0",
    "autogen-ext>=0.4.0",
    "streamlit>=1.57.0",
    "docx2pdf>=0.1.8",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
